# MCPServer

./: .env  basic_web_search.py  pyproject.toml  search_docs.py
fastapi_example/: basic_web_search.py  calculator_server.py  echo_server.py  search_docs.py  server.py
